pkginclude_HEADERS = ap.h \
		  arena.h \
		  arith.h \
		  array.h \
		  arrayrep.h \
		  assert.h \
		  atom.h \
		  bit.h \
		  chan.h \
		  except.h \
		  fmt.h \
		  list.h \
		  mem.h \
		  mp.h \
		  ring.h \
		  sem.h \
		  seq.h \
		  set.h \
		  stack.h \
		  str.h \
		  table.h \
		  text.h \
		  thread.h \
		  xp.h
